<resources>
    <string name="app_name">IT ASSISTANT</string>


    <!-- activity_main.xml -->
    <string name="toolbar_title" translatable="false">AI Support Assistant</string>
    <string name="hint_message">Type your message…</string>
    <string name="cd_send">Send message</string>

    <!-- menu -->
    <string name="setting_log_out">Log out</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_new_chat">New chat</string>

    <!-- item_message.xml -->
    <string name="item_message_assistant_message">Assistant message</string>
    <string name="item_message_user_message">User message</string>
    <string name="menu_button">Menu</string>
    <string name="type_your_message" translatable="false">Type your message\n</string>
    <string name="more_chat_options">More chat options</string>
    <string name="chat_title">Chat title</string>
    <string name="rename_chat">Rename chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="description_add_a_photo" translatable="false">Add a photo</string>
    <string name="description_create_new_chat" translatable="false">Create new chat</string>
    <string name="description_open_settings" translatable="false">Open Settings</string>
    <string name="description_send_message" translatable="false">Send message</string>
    <string name="chats_label">Chats</string>
    <string name="description_scroll_to_bottom" translatable="false">Scroll to bottom</string>
    <string name="log_in">Log in</string>
    <string name="email_log_in">Email</string>
    <string name="password_log_in">Password</string>
    <string name="contact_admin_log_in">Contact your administrator if you forgot your password</string>
    <string name="add_a_user">Add a user</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email_addUser">Email:</string>
    <string name="id_AddUser">ID:</string>
    <string name="password_addUser">Password:</string>
    <string name="confirm_password_addUser">Confirm password:</string>
    <string name="role_addUser">Role:</string>
    <string name="employee_addUser">Employee</string>
    <string name="admin_addUser">Admin</string>
    <string name="create_user_addUser">Create user</string>
    <string name="settings_settings">Settings</string>
    <string name="account_settings">Account</string>
    <string name="email_settings">Email</string>
    <string name="name_settings">Name</string>
    <string name="work_space_settings">Work Space</string>
    <string name="app_settings">App</string>
    <string name="appearance_settings">Appearance</string>
    <string name="language_settings">Language</string>
    <string name="admin_settings_settings">Admin settings</string>
    <string name="email_example_com_settings" translatable="false">email@example.com</string>
    <string name="user_name_settings">User Name</string>
    <string name="workSpace_settings">Company</string>
    <string name="system_settings">System</string>
    <string name="english_settings">English</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="english_choice" translatable="false">English</string>
    <string name="hebrew_choice" translatable="false">עברית</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_settings">Appearance</string>


</resources>