<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/settings_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_settings"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/settings_text_color"
            android:layout_marginBottom="12dp" />

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_system"
                android:textColor="@color/settings_answer_text_color"/>

            <RadioButton
                android:id="@+id/radioLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light"
                android:textColor="@color/settings_answer_text_color"/>

            <RadioButton
                android:id="@+id/radioDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark"
                android:textColor="@color/settings_answer_text_color"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="#595858"
                android:textColor="@color/settings_text_color"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_marginStart="8dp"
                android:backgroundTint="#595858"
                android:textColor="@color/settings_text_color"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
