<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/settings_background_color">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingBottom="24dp"
        android:textColor="@color/settings_text_color"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_settings_section">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_log_in"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:padding="12dp"
        android:textColor="@color/settings_text_color"
        android:textColorHint="@color/settings_answer_text_color"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_log_in"
        android:inputType="textPassword"
        android:singleLine="true"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/settings_text_color"
        android:textColorHint="@color/settings_answer_text_color"/>

    <TextView
        android:id="@+id/loginErrorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Invalid email or password"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:textSize="13sp"
        android:textColor="#D32F2F" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_admin_log_in"
        android:textSize="13sp"
        android:layout_marginTop="26dp"
        android:padding="16dp"
        android:textColor="@color/settings_answer_text_color" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:backgroundTint="#595858"
        android:textColor="@color/settings_answer_text_color"/>

</LinearLayout>
